<resources>
    <string name="app_name">Diabetic Assistant</string>
    <string name="title_activity_load_profiles">LoadProfilesActivity</string>
    <string name="title_activity_second">UserProfile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="preference_file_key">edu.pg.DiA.userId</string>

    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
    <!-- MENU -->
    <!-- Profile list fragments -->
    <string name="menu_profile_list">Lista profili</string>
    <string name="menu_add_new_profile">Dodaj nowy profil</string>

    <!-- Drawer -->
    <string name="menu_profile">Profil</string>    <!--Profile-->
    <string name="menu_medicines">Leki</string>    <!--Medicines-->
    <string name="diet">Dieta</string>   <!--Diet-->
    <string name="menu_diet">Dieta</string>
    <string name="measurements">Pomiary</string>   <!--Measurements-->
    <string name="menu_glucose_measurements">Pomiary glukozy</string>  <!--Glucose Measurements-->
    <string name="menu_reminder_list">Lista przypomnień</string>
    <string name="menu_weight_measurements">Pomiary masy ciała</string>    <!--Weight Measurements-->
    <string name="menu_journal">Dziennik</string>    <!--Journal-->
    <string name="menu_schedule">Harmonogram</string>  <!--Schedule-->
    <string name="menu_reports">Raporty</string>    <!--Reports-->
    <string name="menu_settings">Ustawienia</string>  <!--Settings-->
    <string name="menu_help">Pomoc</string>  <!--Help-->
    <string name="menu_change_profile">Zmień profil</string>    <!--Change profile-->

    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
    <!--Profile list-->
    <string name="add_new_profile">Dodaj nowy profil</string>
    <string name="first_name_label">Imię</string>
    <string name="first_name">Podaj imię</string>
    <string name="last_name_label">Nazwisko</string>
    <string name="last_name">Podaj nazwisko</string>
    <string name="birth_year_label">Rok urodzenia</string>
    <string name="birth_year">Podaj rok urodzenia</string>
    <string name="height_cm_label">Wzrost w cm</string>
    <string name="height_cm">Podaj wzrost w cm</string>
    <string name="sex_label">Płeć:</string>
    <string name="sex">Podaj płeć</string>

    <!-- Spinner sex-->
    <string-array name="sex_array">
        <item></item>
        <item>kobieta</item>
        <item>mężczyzna</item>
        <item>inna</item>
    </string-array>

    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
    <!--Profile-->
    <string name="profile_name_label">Imię:</string>
    <string name="profile_surname_label">Nazwisko:</string>
    <string name="profile_sex_label">Płeć:</string>
    <string name="profile_age_label">Wiek:</string>
    <string name="profile_height_label">Wzrost:</string>
    <string name="profile_height_unit">cm</string>
    <string name="profile_weight_label">Waga:</string>
    <string name="profile_weight_unit">kg</string>

    <!--Edit profile-->
    <string name="edit_profile">Edytuj dane profilowe</string>

    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
    <!--Medicine list-->
    <string name="add_new_medicine">Dodaj nowy lek</string>

    <!--Add medicine-->
    <string name="menu_add_new_medicine">Dodaj nowy lek</string>

    <string name="medicine_name_label">Nazwa</string>
    <string name="medicine_name">Podaj nazwę leku</string>
    <string name="medicine_description">Podaj opis</string>
    <string name="medicine_unit_label">Jednostka</string>
    <string name="medicine_units">Podaj jednostki</string>

    <!--Edit medicine-->
    <string name="edit_medicine">Edytuj dane leku</string>

    <!--Medicine View-->
    <string name="medicine_description_label">Opis</string>
    <string name="medicine_reminder_list_label">Przypomnienia</string>
    <string name="medicine_reminder_label">Przypomnienie</string>
    <string name="medicine_reminder_dose_label">Dawka:</string>

    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
    <!--Glucose measurements list-->
    <string name="menu_add_new_glucose_measurement">Dodaj nowy pomiar glukozy</string>

    <string name="glucose_measurement_unit">mg/dL</string>
    <string name="glucose_measurement_value_txt">Podaj zmierzoną wartość poziomu glukozy we krwi w mg/dL</string>
    <string name="glucose_measurement_value">Podaj zmierzoną wartość (mg/dL)</string>

    <string name="glucose_measurement__reminder_label">pomiar glukozy</string>

    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
    <!--Weight measurements list-->
    <string name="menu_add_new_weight_measurement">Dodaj nowy pomiar masy ciała</string>

    <string name="weight_measurement_unit">kg</string>
    <string name="weight_measurement_value_txt">Podaj zmierzoną masę ciała w kg</string>
    <string name="weight_measurement_value">Podaj zmierzoną wartość (kg)</string>

    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
    <!--Schedule-->
    <string name="set_date">Wybierz datę</string>
    <string name="calendar_preview_button_txt">Podgląd przypomnień</string>
    <string name="calendar_add_reminder_button_txt">Dodaj przypomnienie</string>

    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
    <!--Reminder-->
    <string name="menu_add_new_reminder">Dodaj nowe przypomnienie</string>
    <string name="menu_edit_reminder">Edytuj przypomnienie</string>

    <string name="spinner_alarm_type_label">Typ przypomnienia</string>
    <string name="spinner_medicine_option_label">Nazwa leku</string>
    <string name="medicine_dose_label">Dawka</string>
    <string name="reminder_time_label">Godzina</string>
    <string name="spinner_repeat_label">Czy cyklicznie?</string>

    <string name="reminder_medicine_dose">Podaj dawkę</string>
    <string name="reminder_date">Podaj datę przypomnienia (yyyy-mm-dd)</string>
    <string name="reminder_time">Podaj godzinę przypomnienia</string>
    <string name="reminder_alarm_type">Podaj typ przypomnienia</string>
    <string name="reminder_weekday">Podaj dzień tygodnia</string>
    <string name="reminder_repeat">Powiadomienie cykliczne?</string>
    <string name="reminder_medicine_option">Wybierz istniejący lek</string>

    <!-- Spinner alarm type-->
    <string-array name="alarm_type_array">
        <item></item>
        <item>lekarstwo</item>
        <item>pomiar glukozy</item>
    </string-array>

    <!-- Spinner weekday-->
    <string-array name="weekday_array">
        <item></item>
        <item>poniedziałek</item>
        <item>wtorek</item>
        <item>środa</item>
        <item>czwartek</item>
        <item>piątek</item>
        <item>sobota</item>
        <item>niedziela</item>
    </string-array>

    <!-- Spinner repeat-->
    <string-array name="repeat_array">
        <item></item>
        <item>tak</item>
        <item>nie</item>
    </string-array>

    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
    <!--Note list-->
    <string name="add_new_note">Dodaj nową notatkę</string>

    <!--Add note-->
    <string name="menu_add_new_note">Dodaj nową notatkę</string>

    <!--Edit note-->
    <string name="edit_note">Edytuj notatkę</string>

    <string name="note_title">Podaj tytuł</string>
    <string name="note_body">Podaj treść</string>

    <!--Note View-->
    <string name="note_title_label">Tytuł</string>
    <string name="note_body_label">Treść</string>

    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
    <!--Literature-->
    <string name="menu_literature">Literatura</string>

    <string name="literature_item1">diabetyk.pl</string>
    <string name="literature_item2">cukrzyca.pl</string>

    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
    <string name="edit">Edytuj</string>
    <string name="delete">Usuń</string>
    <string name="add_reminder">Dodaj przypomnienie</string>
    <string name="reminders_list">Zobacz listę przypomnień</string>
    <string name="reminder_label">Przypomnienie</string>

    <string name="measurement">Pomiar: </string>
    <string name="unit">j.m.</string>
    <string name="add_new_measure">Dodaj nowy pomiar</string>

    <string name="add_button_text">Dodaj</string>
    <string name="edit_button_text">Zmień</string>
    <string name="no_data">Brak danych do wyświetlenia</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>